--- a/.settings/sf.eclipse.javacc.prefs
+++ b/.settings/sf.eclipse.javacc.prefs
@@ -1,6 +1,11 @@
 CLEAR_CONSOLE=false
+JAVACC_OPTIONS=
+JJDOC_OPTIONS=
+JJTREE_OPTIONS=
 JJ_NATURE=true
-RUNTIME_JJJAR=/opt/eclipse/plugins/sf.eclipse.javacc_1.5.27/javacc.jar
-RUNTIME_JTBJAR=/opt/eclipse/plugins/sf.eclipse.javacc_1.5.27/jtb-1.4.7.jar
+JTB_OPTIONS=
+MARK_GEN_FILES_AS_DERIVED=true
+RUNTIME_JJJAR=C\:\\Users\\rui\\Desktop\\eclipse\\plugins\\sf.eclipse.javacc_1.5.27\\javacc.jar
+RUNTIME_JTBJAR=C\:\\Users\\rui\\Desktop\\eclipse\\plugins\\sf.eclipse.javacc_1.5.27\\jtb-1.4.7.jar
 SUPPRESS_WARNINGS=false
 eclipse.preferences.version=1
