--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/Ster/Desktop/FEUP/Compiladores/jgrapht-0.8.3/jgrapht-jdk1.6.jar"/>
+	<classpathentry kind="lib" path="/home/sidner/FEUP/COMP/jgrapht-0.8.3/jgrapht-jdk1.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
