geraçao de codigo

--- a/.settings/sf.eclipse.javacc.prefs
+++ b/.settings/sf.eclipse.javacc.prefs
@@ -1,11 +1,11 @@
-CLEAR_CONSOLE=false
+CLEAR_CONSOLE=true
 JAVACC_OPTIONS=
 JJDOC_OPTIONS=
 JJTREE_OPTIONS=
 JJ_NATURE=true
 JTB_OPTIONS=
 MARK_GEN_FILES_AS_DERIVED=true
-RUNTIME_JJJAR=/opt/eclipse/plugins/sf.eclipse.javacc_1.5.27/javacc.jar
-RUNTIME_JTBJAR=/opt/eclipse/plugins/sf.eclipse.javacc_1.5.27/jtb-1.4.7.jar
-SUPPRESS_WARNINGS=false
+RUNTIME_JJJAR=C\:\\Users\\Ster\\Desktop\\eclipse\\plugins\\sf.eclipse.javacc_1.5.27\\javacc.jar
+RUNTIME_JTBJAR=C\:\\Users\\Ster\\Desktop\\eclipse\\plugins\\sf.eclipse.javacc_1.5.27\\jtb-1.4.7.jar
+SUPPRESS_WARNINGS=true
 eclipse.preferences.version=1
